# Plaza

./: .gitignore  README.md  pyproject.toml
data/demo/: manifest.candidate.json  manifest.json
demo/: README.md
demo/ops/: 0.4.0_COMMIT_BOUNDARY.md  0.5.0_ACCEPTANCE_CONTRACT.md  0.5.0_DEMO_ROADMAP.md  ACCEPTANCE_CHECKLIST.md  BUILD_SEQUENCE.md  DEMO_ACCEPTANCE_CONTRACT.md  DEMO_PHASE1_SELECTION_SUMMARY.md  DEMO_ROADMAP.md  LOCAL_RUNBOOK.md
demo/research/: 0.4.0_FINAL_POLISH_AUDIT.md  0.4.0_PRECOMMIT_AUDIT.md  2026-04-25-mcp-implementation-profile.source.md  2026-04-25-standards-implementation-profile.source.md  CORRECTNESS_AUDIT_REPORT.md  DEMO_RELOCATION_AUDIT.md  Marco jurídico costarricense para la extracción y redistribución de datos gubernamentales.md  README.md  STATE_SIGNALS_IMPLEMENTATION_AUDIT.md
demo/specs/: MCP_IMPLEMENTATION_PROFILE.md  STANDARDS_IMPLEMENTATION_PROFILE.md  STATE_AND_SIGNALS.md
docs/: ACCESS_SURFACES.md  ARCHITECTURE.md  DATA_MODEL.md  LEGAL_BASIS.md  LICENSING.md  PRINCIPLES.md  QUALITY_AND_VALIDATION.md  REFERENCES.md  SCOPE.md  URI_POLICY.md  VERSIONING.md  VISION.md
ontology/: README.md  plaza.ttl  shapes.ttl
registry/: README.md  sources.yml
schemas/: README.md  artifact.schema.json  demo_manifest.schema.json  signal.schema.json  source.schema.json  validation_report.schema.json
src/plaza/cli/: main.py  (+1 more)
tests/: run_tests.py  test_artifacts.py  test_demo_candidate_manifest.py  test_demo_graph.py  test_demo_validation.py  test_doctor.py  test_mcp_demo.py  test_publication_gate.py  test_signals.py  test_unittest_discovery.py
(+36 files in other folders)
